# free-learn

./: .gitignore  .prettierrc  README.md  package.json  pnpm-lock.yaml  pyproject.toml
apps/data-crawler/: main.py  project.json  requirements-minimal.txt  requirements.txt
apps/data-crawler/src/: config.py  crawler.py  deduplicator.py  scraper.py  storage.py  tagger.py
apps/data-crawler/src/connectors/: __init__.py  arxiv.py  coursera.py  edx.py  google.py  harvard_online.py  khan_academy.py  mit_ocw.py  udemy.py  youtube.py
output/: cpp programming.json  python programming.json
scripts/: README.md  install-crawler.ps1  install-crawler.sh
